FIREFLY-891-895: ZTF tab and table bugs - 891: ZTF table text-view not aligned - 895: Tab's close('x') and open tabs button get cut off when resized

--- a/src/firefly/js/ui/panel/TabPanel.css
+++ b/src/firefly/js/ui/panel/TabPanel.css
@@ -23,10 +23,11 @@
 }
 
 .TabPanel__Tabs {
-  list-style: none;
-  padding:0;
-  margin:0;
+    list-style: none;
+    padding:0;
+    margin:0;
     display: inline-flex;
+    overflow: hidden;
 }
 
 
